# portfolio

./: README.md
.devcontainer/: devcontainer.json
MachinesHTB/: TwoMillion.md  outbound.md
projects/: openldap_ad.md
projects/PhishGuard/: README.md  pyproject.toml  requirements.txt
projects/PhishGuard/core/: domain_analyzer.py  heuristics.py  models.py  scorer.py  ssl_checker.py  url_parser.py
projects/PhishGuard/examples/: sample_urls.txt
projects/PhishGuard/interfaces/: cli.py  streamlit_app.py
projects/PhishGuard/utils/: constants.py  entropy.py
projects/aws-secure-login-lab/: README.md  readme.md
projects/aws-secure-login-lab/docs/: threat-model.md
projects/aws-secure-login-lab/lambda/: lambda_function.py
projects/itsm_project/: README.md
projects/itsm_project/backend/: actions.py  app.py  classifier.py  schemas.py
projects/itsm_project/backend/data/: tickets.json  users.json
projects/itsm_project/frontend/: dashboard.py
